# Abel

./: .gitignore  AGENTS.md  Abel_Design_Closure_v1_zh.md  Abel_Engineering_Design_v1_zh.md  Abel_Language_Standard_v1_1_zh.md  CMakeLists.txt  CODEX.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  TUTORIAL_zh.md  Tutorial.zh-CN.md
cmake/: AbelConfig.cmake.in
examples/project/: abel.package.json
examples/project_backend/: abel.package.json
examples/smoke/: backend.abel  hello.abel
plugins/examples/math_backend/: math_backend.cpp  resource.json
src/abelcli/: main.cpp
src/abelcore/: abel_version.cpp  abel_version.h  analysis_index.cpp  analysis_index.h  ast.cpp  ast.h  backend_binder.h  backend_handle_store.h  backend_interface.h  backend_plugin_base.h  backend_registry.cpp  backend_registry.h  builtin_registry.cpp  builtin_registry.h  diagnostic.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  package_manifest.cpp  package_manifest.h  parser.cpp  parser.h  resource_node.cpp  resource_node.h  runtime.cpp  runtime.h  source_span.h  token.h  type.cpp  type.h  typechecker.cpp  typechecker.h  value.cpp  value.h
src/abellsp/: lsp_analyzer.cpp  lsp_analyzer.h  lsp_protocol.cpp  lsp_protocol.h  lsp_server.cpp  lsp_server.h  main.cpp
tests/: cli_dependency_sources.cmake.in  cli_multifile_project.cmake.in  cli_package_publish.cmake.in  cli_scan.cmake.in
tests/backend/: test_backend_resource.cpp
tests/builtin/: test_builtin_registry.cpp
tests/complex/: test_complex_programs.cpp
tests/interpreter/: test_interpreter.cpp
tests/lsp/: test_lsp_protocol.cpp
tests/package/: test_package_manifest.cpp
tests/parser/: test_parser.cpp
tests/sdk_backend/: CMakeLists.txt  run_installed_sdk_fixture.cmake.in  sdk_fixture_backend.cpp
tests/smoke/: test_smoke.cpp
tests/typechecker/: test_typechecker.cpp
vscode/abel-vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/abel-vscode/src/: extension.ts
vscode/abel-vscode/syntaxes/: abel.tmLanguage.json
